# gpio-notify

./: README.md
src/: CMakeLists.txt  gpio-notify.cpp
src/cmake/modules/: Findglib-2.0.cmake
